After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749072 - flacparse: fix buffer leak
flacparse: fix buffer leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-07 14:29 UTC by Guillaume Desmottes
Modified: 2015-05-08 10:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
flacparse: fix buffer leak when stored to seektable (1.41 KB, patch)
2015-05-07 14:29 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2015-05-07 14:29:10 UTC
.
Comment 1 Guillaume Desmottes 2015-05-07 14:29:54 UTC
Created attachment 303036 [details] [review]
flacparse: fix buffer leak when stored to seektable

Fix a leak with the
validate.file.playback.change_state_intensive.samples_multimedia_cx_flac_Yesterday_flac
scenario.
Comment 2 Tim-Philipp Müller 2015-05-08 10:16:10 UTC
Thanks, pushed:

commit 2bd3685d04a4b4421e7edda3c18cd7138ff06d9e
Author: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Date:   Thu May 7 16:25:36 2015 +0200

    flacparse: fix buffer leak when stored to seektable
    
    Fix a leak with the
    validate.file.playback.change_state_intensive.samples_multimedia_cx_flac_Yesterday_flac
    scenario.